--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~7.2.0",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angularfire2": "^5.2.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "firebase": "^6.2.3",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
